--- a/nginx.conf.j2
+++ b/nginx.conf.j2
@@ -35,11 +35,17 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
-        listen       19999;
-        listen       [::]:19999;
+        listen       80;
+        listen       [::]:80;
         server_name  _;
         root         /usr/share/nginx/html;
-
+        location / {
+            proxy_pass http://u21:19999;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
