--- a/nginx.conf.j2
+++ b/nginx.conf.j2
@@ -35,12 +35,12 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
-        listen       80;
-        listen       [::]:80;
+        listen       19999;
+        listen       [::]:19999;
         server_name  _;
         root         /usr/share/nginx/html;
         location / {
-            proxy_pass http://backend:19999;
+            proxy_pass http://u21.local:19999;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
